--- a/MS_Access/MS_Access.csproj
+++ b/MS_Access/MS_Access.csproj
@@ -116,6 +116,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BtnForms\FormAddPositions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BtnForms\FormAddPositions.Designer.cs">
+      <DependentUpon>FormAddPositions.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BtnForms\FormEditPositions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BtnForms\FormEditPositions.Designer.cs">
+      <DependentUpon>FormEditPositions.cs</DependentUpon>
+    </Compile>
     <Compile Include="BtnForms\FormEditPosts.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -160,8 +172,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="BtnForms\FormAddPositions.resx">
+      <DependentUpon>FormAddPositions.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BtnForms\FormAddPosts.resx">
       <DependentUpon>FormAddPosts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BtnForms\FormEditPositions.resx">
+      <DependentUpon>FormEditPositions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="BtnForms\FormEditPosts.resx">
       <DependentUpon>FormEditPosts.cs</DependentUpon>
